--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "09456663-d14b-4497-bc1a-17c951319920"
+      "id": "287a0bbd-cc96-4120-887c-210b2cbf74d6"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "795853b5-5dce-4cdc-86a9-b25e18448ade"
+      "id": "5e183f86-d562-469d-a888-2903a1e5c99c"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "4351f003-f299-4d57-a2cc-cf1df0a8e208"
+      "id": "c086c54e-6efb-4aad-8470-1c9456d525f8"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "275b02ce-dde0-4c9b-b83d-ec1bafd18ca7"
+      "id": "3765e4b6-dfd6-450c-8c61-1ff565e25184"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "e78d254a-bd37-4b92-a69e-36af10ff0623"
+      "id": "c2c14fec-296f-4e97-ac6e-5deb1cca0f92"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "006422be-1fe2-49b8-84c8-a9700045f055"
+      "id": "a8840585-2928-4188-afde-b039a9113a73"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "fec6f390-43fa-4ac3-90d3-c0ae2aab5863"
+      "id": "23ebc4b6-0843-4d3d-aca8-1f8258ae4a0e"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "cb44ba37-a8d7-4257-8a21-00cff82c3858"
+      "id": "253eefc8-7caf-4d7e-97e2-b23b9bf14b6f"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "3947e263-029a-46ad-a9ae-7799a828e26f"
+      "id": "51b316c1-5b11-4f91-b794-63e82d9795fd"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "3b606c63-b84e-4320-aea4-426381842369"
+      "id": "2eb517c1-aef1-47b4-846d-dbc8bf775a2a"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "fcfe67b6-c117-4ce0-8aa0-7d996dfd8a94"
+      "id": "ea131841-6ae7-4ad3-bfcf-32eb3e88b832"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "722c4aaf-fa92-411b-8d35-b4e5119a6d47"
+      "id": "cd1c9b74-52cc-4184-9bd1-77761ad1ed1e"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "40081579-6bd8-49b1-9b09-a8064780d776"
+      "id": "007eb529-5725-458a-b34b-d1228b715aa0"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "041d26fc-0e9a-4d68-9ce9-2b3185b9f4af"
+      "id": "8cf4181d-394b-47e9-81be-c38506f7ae69"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "def8d757-5cbe-4f34-9c2b-64fc7fd1fcfe"
+      "id": "1f6eb01f-1ad2-48c2-bec6-0174424c7886"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "211a0088-c92e-4ca6-b25a-1d3036883445"
+      "id": "b0400983-db00-40f6-8da7-de1aa7a6aad0"
     },
     {
       "cell_type": "code",
