--- a/docs/posts/11wk-1.out.ipynb
+++ b/docs/posts/11wk-1.out.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "# 11wk-1: 추천시스템 (2) – Embedding 레이어, 사용자정의 네트워크,\n",
         "\n",
-        "NN-based 추천시스템\n",
+        "NN-based 추천시스템, A1-A2\n",
         "\n",
         "최규빈  \n",
         "2024-05-14\n",
@@ -15,7 +15,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "aee432f9-3a16-4aef-9af3-62c8b6cbaeb4"
+      "id": "b31f5b43-78fb-433a-9558-1391673a8aa3"
     },
     {
       "cell_type": "code",
@@ -35,7 +35,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "c76d8708-f923-4c72-8223-1e945fa18663"
+      "id": "cd6e9168-8123-4a51-9f59-233090b0e48e"
     },
     {
       "cell_type": "code",
@@ -62,7 +62,7 @@
         "`-` 모티브: `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 매번\n",
         "쓰는건 너무 귀찮지 않어?"
       ],
-      "id": "a2cc9fa3-191f-4197-8730-9ff1ec9fa989"
+      "id": "7e1da3c6-baa6-4a25-a519-40fa4607baea"
     },
     {
       "cell_type": "code",
@@ -88,7 +88,7 @@
       "source": [
         "`-` 코드를 뜯어보면.."
       ],
-      "id": "f8316b7f-2c5c-470c-9cc2-39d113583b4c"
+      "id": "0d24756d-9d14-4d60-a406-c6533d16b04b"
     },
     {
       "cell_type": "code",
@@ -125,7 +125,7 @@
         "`-` `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 함께처리해주는\n",
         "레이어 `torch.nn.Embedding` 존재"
       ],
-      "id": "7b644f7b-bf13-42bc-8571-45cd54234a72"
+      "id": "48613c83-a257-46c5-9127-dcd2351d2a83"
     },
     {
       "cell_type": "code",
@@ -168,7 +168,7 @@
         "`# 의문`: 그냥 원핫인코딩없이 바로 선형변환하면 안되나? (= 꼭\n",
         "임베딩레이어를 써야하나?)"
       ],
-      "id": "7bf6c244-721f-4040-8888-89abe1718e6c"
+      "id": "f14965f8-d803-4f61-a9f4-43be83c40cd3"
     },
     {
       "cell_type": "code",
@@ -220,7 +220,7 @@
         "\n",
         "`-` 수식의 차이: 비슷해보이지만 계산방식이 조금 다름"
       ],
-      "id": "d909a3e4-039b-4c73-800d-619d202424e6"
+      "id": "3ccffc4b-3455-4d6f-a0f3-e6e5a271eafa"
     },
     {
       "cell_type": "code",
@@ -238,7 +238,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "-   $\\text{linr}({\\bf X}) = \\begin{bmatrix} 0 \\\\ 1 \\\\ 2 \\\\ 0 \\\\ 1 \\end{bmatrix} \\times (-0.3467) + (-0.8470)=\\begin{bmatrix} -0.8470 \\\\ -1.1937 \\\\ -1.5404 \\\\ -0.8470 \\\\ -1.1937 \\end{bmatrix}$\n",
+        "-   $l_1({\\bf X}) = \\begin{bmatrix} 0 \\\\ 1 \\\\ 2 \\\\ 0 \\\\ 1 \\end{bmatrix} \\times (-0.3467) + (-0.8470)=\\begin{bmatrix} -0.8470 \\\\ -1.1937 \\\\ -1.5404 \\\\ -0.8470 \\\\ -1.1937 \\end{bmatrix}$\n",
         "\n",
         "-   $\\text{ebdd}({\\boldsymbol x})= \\text{linr}\\big(\\text{onehot}({\\boldsymbol x})\\big) = \\begin{bmatrix} 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & 0 & 1 \\\\ 1 & 0 & 0 \\\\ 0 & 1 & 0 \\end{bmatrix}\\begin{bmatrix} -0.8178 \\\\ -0.7052 \\\\ -0.5843 \\end{bmatrix} = \\begin{bmatrix} -0.8178 \\\\ -0.7052 \\\\ -0.5843 \\\\ -0.8178 \\\\ -0.7052 \\end{bmatrix}$\n",
         "\n",
@@ -274,7 +274,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "0e84cca0-b77b-45e6-bba7-e2fa78200dbc"
+      "id": "752271c7-0c21-4ddb-a11c-744cf1bc7e4a"
     },
     {
       "cell_type": "code",
@@ -314,7 +314,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "026fb650-3d6d-4464-951c-5132697db698"
+      "id": "5e8b2dd7-d39b-4f00-b917-7db2f6f8c927"
     },
     {
       "cell_type": "code",
@@ -374,7 +374,7 @@
         "\n",
         "`# 예비학습1`: `net(x)`와 사실 `net.forward(x)`는 같다."
       ],
-      "id": "3b9331ac-d5bd-496a-a393-7549f2b764f9"
+      "id": "3c98985d-f694-46db-9487-e5413862f4af"
     },
     {
       "cell_type": "code",
@@ -434,7 +434,7 @@
       "source": [
         "그래서 `net.forward`를 재정의하면 `net(x)`의 기능을 재정의 할 수 있다."
       ],
-      "id": "7ce543d2-dde7-4a4a-a0a5-70838d5f15db"
+      "id": "35c9b3fb-52ee-4a67-991a-b36618e907c5"
     },
     {
       "cell_type": "code",
@@ -458,7 +458,7 @@
         "    `net.forward(x)`, `net(x)` 도 입력값에 상관없이 항상 ’메롱’을\n",
         "    출력하게 될것임"
       ],
-      "id": "6a720f32-e954-4162-8ac1-88ff4aac25bd"
+      "id": "fb18e979-dccc-472e-85ea-ac4a36105cf7"
     },
     {
       "cell_type": "code",
@@ -496,7 +496,7 @@
         "\n",
         "(예시1)"
       ],
-      "id": "2dad0721-3fe8-4d97-b83c-5d945c950677"
+      "id": "a1279063-6d64-4df8-bf70-087d56da6a99"
     },
     {
       "cell_type": "code",
@@ -540,7 +540,7 @@
         "\n",
         "(예시2)"
       ],
-      "id": "1091b183-00c4-413b-9c7d-e2c6e30cb4ae"
+      "id": "a819e0f5-3435-4c70-a314-927687df88e4"
     },
     {
       "cell_type": "code",
@@ -652,7 +652,7 @@
         "\n",
         "`# 실습`: 사용자정의 네트워크를 사용하여 아래의 자료를 학습해보자."
       ],
-      "id": "4c9131c9-5053-4041-86e7-3082542d40d1"
+      "id": "e16d935f-af94-4f22-b950-639cbc077842"
     },
     {
       "cell_type": "code",
@@ -696,7 +696,7 @@
       "source": [
         "(풀이)"
       ],
-      "id": "66876d7d-213d-4226-b151-2b8d0ac820e6"
+      "id": "b0e5a4db-e71a-4a82-ac03-ffaff4e6327f"
     },
     {
       "cell_type": "code",
@@ -794,7 +794,7 @@
       ],
       "source": [
         "plt.plot(x,y,'o')\n",
-        "plt.plot(x,net(x).data,'--') # 최초의 직선"
+        "plt.plot(x,net(x).data,'--')"
       ],
       "id": "bf3b1d7c-4536-4fbe-a43a-6a715778f45f"
     },
@@ -808,7 +808,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "de0421e3-839e-4f14-be92-bc4e87a7f192"
+      "id": "bd75b51f-7dbb-449f-8dd1-a3fe1c91553d"
     },
     {
       "cell_type": "code",
@@ -848,7 +848,7 @@
         "\n",
         "(풀이1) – `net(X1,X2)`"
       ],
-      "id": "5ea50fcb-cba5-49e4-8894-c39cbf874e71"
+      "id": "435ee14d-3c54-4355-83f7-a4b43a5d01e3"
     },
     {
       "cell_type": "code",
@@ -921,7 +921,7 @@
       "source": [
         "(풀이2) – `net(X)`"
       ],
-      "id": "4ae5d97e-99cb-42bc-9b82-213b8e3dcdb3"
+      "id": "d5f3c9b1-c752-41ea-938f-92defee15bd9"
     },
     {
       "cell_type": "code",
@@ -1024,7 +1024,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "00078823-3f03-42bc-aa75-1d6827d345b1"
+      "id": "3302d651-9ccb-4db5-b28c-2532d486b5ba"
     },
     {
       "cell_type": "code",
@@ -1064,7 +1064,7 @@
         "\n",
         "(풀이1) – 실패"
       ],
-      "id": "8d800270-47b9-4c01-b259-e37d8ad1e8d6"
+      "id": "6cca5545-87a1-4c1a-99cd-ed6f9c197e26"
     },
     {
       "cell_type": "code",
@@ -1142,7 +1142,7 @@
         "\n",
         "(풀이2) – 에라 모르겠다 깊은신경망.."
       ],
-      "id": "aef9e304-8a4b-43b6-b48b-91fc09ec2a05"
+      "id": "960023d3-c84b-4808-be63-5820c34acaf8"
     },
     {
       "cell_type": "code",
@@ -1223,7 +1223,7 @@
       "source": [
         "-   잘 맞추긴했는데 불안함"
       ],
-      "id": "2aa623e2-7a09-47ac-b886-285f3140a5df"
+      "id": "e749d1ad-9347-46e7-9156-8032e2f57e20"
     },
     {
       "cell_type": "code",
@@ -1243,7 +1243,7 @@
       "source": [
         "(영자-다호), (보람-다호), (하니-영호) 를 예측해보자."
       ],
-      "id": "f862dc7a-c3a9-49d8-a307-50f88df2cf4f"
+      "id": "cca29a7f-4e87-4551-96a1-6fc1da672d83"
     },
     {
       "cell_type": "code",
@@ -1280,11 +1280,143 @@
         "\n",
         "![](https://github.com/guebin/DL2024/blob/main/posts/NCF.png?raw=true)\n",
         "\n",
+        "# A1. 자잘한 용어 정리 ($\\star$)\n",
+        "\n",
+        "## A. 지도학습\n",
+        "\n",
+        "`-` 우리가 수업에서 다루는 데이터는 주로 아래와 같은 느낌이다.\n",
+        "\n",
+        "1.  데이터는 $(X,y)$의 형태로 정리되어 있다.\n",
+        "\n",
+        "2.  $y$는 우리가 관심이 있는 변수이다. 즉 우리는 $y$를 적절하게 추정하는\n",
+        "    것에 관심이 있다.\n",
+        "\n",
+        "3.  $X$는 $y$를 추정하기 위해 필요한 정보이다.\n",
+        "\n",
+        "|  $X$ = 설명변수 = 독립변수   | $y$ = 반응변수 = 종속변수  |     비고     |     순서     |           예시           |\n",
+        "|:-------------:|:-------------:|:-------------:|:-------------:|:-------------:|\n",
+        "|            이미지            |          카테고리          | 합성곱신경망 |   상관없음   |  개/고양이 이미지 구분   |\n",
+        "|         유저,아이템          |            평점            |  추천시스템  |   상관없음   |    넷플릭스 영화추천     |\n",
+        "|     과거~오늘까지의주가      |          내일주가          |  순환신경망  | 순서상관있음 |         주가예측         |\n",
+        "| 처음 $m$개의 단어(혹은 문장) | 이후 1개의 단어(혹은 문장) |  순환신경망  | 순서상관있음 |     챗봇, 텍스트생성     |\n",
+        "| 처음 $m$개의 단어(혹은 문장) |          카테고리          |  순환신경망  | 순서상관있음 | 영화리뷰 텍스트 감정분류 |\n",
+        "\n",
+        "`-` 이러한 문제상황, 즉 $(X,y)$가 주어졌을때 $X \\to y$를 추정하는 문제를\n",
+        "supervised learning 이라한다.\n",
+        "\n",
+        "## B. 모델이란?\n",
+        "\n",
+        "> 모델이란 단어는 제 발작버튼이었어요..\n",
+        "\n",
+        "`-` 통계학에서 모델은 y와 x의 관계를 의미하며 오차항의 설계를 포함하는\n",
+        "개념이다. 이는 통계학이 “데이터 = 정보 + 오차”의 관점을 유지하기\n",
+        "때문이다. 따라서 통계학에서 모델링이란\n",
+        "\n",
+        "$$y_i = net(x_i) + \\epsilon_i$$\n",
+        "\n",
+        "에서 (1) 적절한 함수 $net$를 선택하는 일 (2) 적절한 오차항 $\\epsilon_i$\n",
+        "을 설계하는일 모두를 포함한다.\n",
+        "\n",
+        "`-` 딥러닝 혹은 머신러닝에서 모델은 단순히\n",
+        "\n",
+        "$$y_i \\approx net(x_i)$$\n",
+        "\n",
+        "를 의미하는 경우가 많다. 즉 “model=net”라고 생각해도 무방하다. 이 경우\n",
+        "“모델링”이란 단순히 적절한 $net$을 설계하는 것만을 의미할 경우가 많다.\n",
+        "\n",
+        "`-` 그래서 생긴일\n",
+        "\n",
+        "-   통계학교재 특: 분류문제와 회귀문제를 엄밀하게 구분하지 않는다. 사실\n",
+        "    오차항만 다를뿐이지 크게보면 같은 회귀모형이라는 관점이다. 그래서\n",
+        "    일반화선형모형(GLM)이라는 용어를 쓴다.\n",
+        "-   머신러닝/딥러닝교재 특: 회귀문제와 분류문제를 구분해서 설명한다.\n",
+        "    (표도 만듦) 이는 오차항에 대한 기술을 모호하게 하여 생기는 현상이다.\n",
+        "\n",
+        "## C. 학습이란?\n",
+        "\n",
+        "`-` 학습이란 주어진 자료 $(X,y)$를 잘 분석하여 $X$에서 $y$로 가는 어떠한\n",
+        "“규칙” 혹은 “원리”를 찾는 것이다.\n",
+        "\n",
+        "-   학습이란 주어진 자료 $(X,y)$를 잘 분석하여 $X$에서 $y$로 가는 어떠한\n",
+        "    “맵핑”을 찾는 것이다.\n",
+        "-   학습이란 주어진 자료 $(X,y)$를 잘 분석하여 $X$에서 $y$로 가는 어떠한\n",
+        "    “함수”을 찾는 것이다. 즉 $y\\approx f(X)$가 되도록 만드는 $f$를 잘\n",
+        "    찾는 것이다. (이 경우 “함수를 추정한다”라고 표현)\n",
+        "-   학습이란 주어진 자료 $(X,y)$를 잘 분석하여 $X$에서 $y$로 가는 어떠한\n",
+        "    “모델” 혹은 “모형”을 찾는 것이다. 즉 $y\\approx model(X)$가 되도록\n",
+        "    만드는 $model$을 잘 찾는 것이다. (이 경우 “모형을 학습시킨다”라고\n",
+        "    표현)\n",
+        "-   **학습이란 주어진 자료 $(X,y)$를 잘 분석하여 $X$에서 $y$로 가는\n",
+        "    어떠한 “네트워크”을 찾는 것이다. 즉 $y\\approx net(X)$가 되도록\n",
+        "    만드는 $net$을 잘 찾는 것이다. (이 경우 “네트워크를 학습시킨다”라고\n",
+        "    표현)**\n",
+        "\n",
+        "`-` prediction이란 학습과정에서 찾은 “규칙” 혹은 “원리”를 $X$에 적용하여\n",
+        "$\\hat{y}$을 구하는 과정이다. 학습과정에서 찾은 규칙 혹은 원리는\n",
+        "$f$,$model$,$net$ 으로 생각가능한데 이에 따르면 아래가 성립한다.\n",
+        "\n",
+        "-   $\\hat{y} = f(X)$\n",
+        "-   $\\hat{y} = model(X)$\n",
+        "-   $\\hat{y} = net(X)$\n",
+        "\n",
+        "## D. $\\hat{y}$를 부르는 다양한 이름\n",
+        "\n",
+        "`-` $\\hat{y}$는 $X$가 주어진 자료에 있는 값인지 아니면 새로운 값 인지에\n",
+        "따라 지칭하는 이름이 미묘하게 다르다.\n",
+        "\n",
+        "1.  $X \\in data$: $\\hat{y}=net(X)$ 는 predicted value, fitted value 라고\n",
+        "    부른다.\n",
+        "\n",
+        "2.  $X \\notin data$: $\\hat{y}=net(X)$ 는 predicted value, predicted\n",
+        "    value with new data 라고 부른다.\n",
+        "\n",
+        "`-` 경우1은 “$loss$ = $y$ 와 $\\hat{y}$ 의 차이” 를 정의할 수 있으나\n",
+        "경우2는 그렇지 않다.\n",
+        "\n",
+        "## E. 다양한 코드들\n",
+        "\n",
+        "`-` 파이썬 코드..\n",
+        "\n",
+        "``` python\n",
+        "#Python\n",
+        "predictor.fit(X,y) # autogluon 에서 \"학습\"을 의미하는 과정\n",
+        "model.fit(X,y) # sklearn 에서 \"학습\"을 의미하는 과정\n",
+        "learner.learn() # fastai 에서 \"학습\"을 의미하는 과정\n",
+        "learner.fine_tune(1) # fastai 에서 \"부분학습\"을 의미하는 과정\n",
+        "learner.predict(cat1) # fastai 에서 \"예측\"을 의미하는 과정 \n",
+        "model.fit(x, y, batch_size=32, epochs=10) # keras에서 \"학습\"을 의미하는 과정\n",
+        "model.predict(test_img) # keras에서 \"예측\"을 의미하는 과정 \n",
+        "```\n",
+        "\n",
+        "`-` R 코드..\n",
+        "\n",
+        "``` r\n",
+        "# R\n",
+        "ols <- lm(y~x) # 선형회귀분석에서 학습을 의미하는 함수\n",
+        "ols$fitted.values # 선형회귀분석에서 yhat을 출력 \n",
+        "predict(ols, newdata=test) # 선형회귀분석에서 test에 대한 예측값을 출력하는 함수\n",
+        "ols$coef # 선형회귀분석에서 weight를 확인하는 방법\n",
+        "```\n",
+        "\n",
+        "# A2. 참고자료들\n",
+        "\n",
+        "`-` 케라스/텐서플로우: <https://guebin.github.io/STBDA2022/>\n",
+        "\n",
+        "`-` 상속:\n",
+        "<https://guebin.github.io/PP2023/posts/03_Class/2023-06-12-15wk-1.html>\n",
+        "\n",
+        "`-` sklearn/autogluon: <https://guebin.github.io/MP2023/>\n",
+        "\n",
+        "`-` 리눅스관련: <https://guebin.github.io/DSTBX2024/> – 자료 부실함..\n",
+        "강의영상 없는것 많음..\n",
+        "\n",
+        "`-` 클래스기본: https://guebin.github.io/PP2023/ – `10wk-2` ~ `15wk-2`\n",
+        "\n",
         "He, Xiangnan, Lizi Liao, Hanwang Zhang, Liqiang Nie, Xia Hu, and\n",
         "Tat-Seng Chua. 2017. “Neural Collaborative Filtering.” In *Proceedings\n",
         "of the 26th International Conference on World Wide Web*, 173–82."
       ],
-      "id": "60e10835-9b61-4cc2-917f-1f58487322a1"
+      "id": "7803910c-3e6c-4e1e-8c78-4980d56db668"
     }
   ],
   "nbformat": 4,
